# dicomweb-gcp-cog-replicate

./: .gitignore  README.md  cog-info.md  fetch.py  main.py  predict.py  pyproject.toml  requirements.txt
.cog/: openapi_schema.json
downloads/: 1.2.826.0.1.3680043.8.498.10970362123315141706729354408942429392.dcm  1.2.826.0.1.3680043.8.498.14524446584130241838417587602171370362.dcm  1.2.826.0.1.3680043.8.498.34054708599873422974112163408767322943.dcm  1.2.826.0.1.3680043.8.498.54301272215104111319851419086158298198.dcm  1.2.826.0.1.3680043.8.498.56683194354815308484438298474779429939.dcm  1.2.826.0.1.3680043.8.498.70222138448707670753311440733283287649.dcm  1.2.826.0.1.3680043.8.498.87000493089367938137091820034596167901.dcm  1.2.826.0.1.3680043.8.498.93688481007635301768542569288038727904.dcm
images/: 00000003_001.dcm  00000003_005.dcm
